<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/baseline_search_24"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        android:icon="@drawable/baseline_sort_24"
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/action_sort_by_name"
                android:title="@string/sort_by_name"/>

            <item
                android:id="@+id/action_sort_by_date_created"
                android:title="@string/sort_by_date"/>

        </menu>
    </item>

    <item
        android:id="@+id/action_selected_clear"
        android:title="@string/clear_all"/>

</menu>